# triad-ci

./: Cargo.toml
src/: lib.rs
src/server/: routes.rs
src/worker/: container.rs  docker.rs  mod.rs  podman.rs
