[package]
name = "triad-ci"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
chrono = { version = "0.4.24", features = ["serde"] }
http-body-util = "0.1.0-rc.2"
hyper = { version = "0.14.26", features = ["client", "runtime"] }
podman-api = { version = "0.10.0", features = ["vendored-ssl"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
